[gd_scene load_steps=23 format=3 uid="uid://bru82jhjfot2f"]

[ext_resource type="PackedScene" uid="uid://dmk8fks2arvup" path="res://Scenes/Characters/frog.tscn" id="1_q64h8"]
[ext_resource type="PackedScene" uid="uid://bfgqxheddo34b" path="res://Scenes/Screens/player_info.tscn" id="1_rshbr"]
[ext_resource type="PackedScene" uid="uid://d0m5f2jwrd8n2" path="res://Scenes/Backgrounds/parallax_background_1.tscn" id="2_m0hyg"]
[ext_resource type="PackedScene" uid="uid://bg75ne1r5trhv" path="res://Scenes/Enviroments/escenario_1.tscn" id="3_hw1w0"]
[ext_resource type="PackedScene" uid="uid://blk5bb48i6ugo" path="res://Scenes/Enviroments/moving_platform_1.tscn" id="4_sl0ud"]
[ext_resource type="PackedScene" uid="uid://dv0mcmp1esvhn" path="res://Scenes/Enemys/saw.tscn" id="5_56epw"]
[ext_resource type="PackedScene" uid="uid://bihx28710s84e" path="res://Scenes/Enviroments/trampoline.tscn" id="6_0j6q6"]
[ext_resource type="PackedScene" uid="uid://rl0l40o1rd2v" path="res://Scenes/Enemys/spike_ball.tscn" id="7_nr7c3"]
[ext_resource type="PackedScene" uid="uid://utki8wt26clq" path="res://Scenes/Enviroments/fruit.tscn" id="8_rrxuy"]
[ext_resource type="PackedScene" uid="uid://c0xet1rf0byyr" path="res://Scenes/Enviroments/portal.tscn" id="10_506xt"]
[ext_resource type="Script" path="res://Scenes/Screens/init_cutScene1.gd" id="11_vu2iy"]
[ext_resource type="AudioStream" uid="uid://dn0phub0eamu3" path="res://Assets/Sonidos/pixel-song-19-31953_junta.mp3" id="12_kkf7h"]
[ext_resource type="Script" path="res://Scenes/Screens/AudioFondo.gd" id="13_3isx3"]

[sub_resource type="Curve2D" id="Curve2D_3vje4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1522, 164, 0, 0, 0, 0, 1866.8, 164, 0, 0, 0, 0, 1866.8, 284, 156.582, -69.9187, -156.582, 69.9187, 1522, 284)
}
point_count = 4

[sub_resource type="Animation" id="Animation_1v850"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bybyg"]
resource_name = "regular_moving"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a820p"]
_data = {
"RESET": SubResource("Animation_1v850"),
"regular_moving": SubResource("Animation_bybyg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cr1eh"]
size = Vector2(424.002, 46)

[sub_resource type="Animation" id="Animation_nn1li"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0w3wl"]
resource_name = "to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_ee5t1"]
resource_name = "to_transparent"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jnyro"]
_data = {
"RESET": SubResource("Animation_nn1li"),
"to_black": SubResource("Animation_0w3wl"),
"to_transparent": SubResource("Animation_ee5t1")
}

[node name="Node2D" type="Node2D"]

[node name="PlayerInfo" parent="." instance=ExtResource("1_rshbr")]

[node name="portal" parent="." instance=ExtResource("10_506xt")]
position = Vector2(6294, 486)
grupo_portal = 2

[node name="portal2" parent="." instance=ExtResource("10_506xt")]
position = Vector2(6105, 358)
grupo_portal = 2

[node name="TileMap" parent="." instance=ExtResource("3_hw1w0")]

[node name="ninja_frog" parent="." instance=ExtResource("1_q64h8")]
position = Vector2(5366, 466)

[node name="ParallaxBackground" parent="." instance=ExtResource("2_m0hyg")]

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(13, -4)
scale = Vector2(0.988981, 1.04167)
curve = SubResource("Curve2D_3vje4")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(1522, 164)
rotation = 0.00273951
rotates = false

[node name="moving_plaform_1" parent="Path2D/PathFollow2D" instance=ExtResource("4_sl0ud")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Path2D/PathFollow2D"]
libraries = {
"": SubResource("AnimationLibrary_a820p")
}
autoplay = "regular_moving"
speed_scale = 0.1

[node name="saw" parent="." instance=ExtResource("5_56epw")]
position = Vector2(2117, 382)

[node name="Trampoline" parent="." instance=ExtResource("6_0j6q6")]
position = Vector2(2642, 484)

[node name="SpikeBall" parent="." instance=ExtResource("7_nr7c3")]
position = Vector2(3278, 292)

[node name="SpikeBall2" parent="." instance=ExtResource("7_nr7c3")]
position = Vector2(3453, 260)

[node name="SpikeBall3" parent="." instance=ExtResource("7_nr7c3")]
position = Vector2(3695, 294)

[node name="SpikeBall4" parent="." instance=ExtResource("7_nr7c3")]
position = Vector2(5199, 343)

[node name="fruit" parent="." instance=ExtResource("8_rrxuy")]
position = Vector2(5015, 348)
fruitType = "bananas"

[node name="fruit2" parent="." instance=ExtResource("8_rrxuy")]
position = Vector2(5061, 350)

[node name="fruit3" parent="." instance=ExtResource("8_rrxuy")]
position = Vector2(4959, 349)
fruitType = "cherries"

[node name="fruit4" parent="." instance=ExtResource("8_rrxuy")]
position = Vector2(2645, 196)
fruitType = "bananas"

[node name="fruit5" parent="." instance=ExtResource("8_rrxuy")]
position = Vector2(2645, 273)

[node name="fruit6" parent="." instance=ExtResource("8_rrxuy")]
position = Vector2(2643, 356)
fruitType = "cherries"

[node name="fruit7" parent="." instance=ExtResource("8_rrxuy")]
position = Vector2(5906, 224)
fruitType = "cherries"

[node name="fruit8" parent="." instance=ExtResource("8_rrxuy")]
position = Vector2(6101, 265)
fruitType = "bananas"

[node name="init_cutScene1" type="Area2D" parent="."]
collision_mask = 16
script = ExtResource("11_vu2iy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="init_cutScene1"]
position = Vector2(7346.98, 34)
rotation = 1.5704
shape = SubResource("RectangleShape2D_cr1eh")

[node name="CanvasLayer" type="CanvasLayer" parent="init_cutScene1"]

[node name="ColorRect" type="ColorRect" parent="init_cutScene1/CanvasLayer"]
offset_left = -63.0
offset_top = -40.0
offset_right = 1205.0
offset_bottom = 673.0
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="init_cutScene1"]
libraries = {
"": SubResource("AnimationLibrary_jnyro")
}

[node name="portal3" parent="." instance=ExtResource("10_506xt")]
position = Vector2(3903, 423)

[node name="portal4" parent="." instance=ExtResource("10_506xt")]
position = Vector2(5603, 488)

[node name="AudioFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_kkf7h")
volume_db = -11.183
autoplay = true
script = ExtResource("13_3isx3")

[connection signal="body_entered" from="init_cutScene1" to="init_cutScene1" method="_on_body_entered"]
[connection signal="animation_finished" from="init_cutScene1/AnimationPlayer" to="init_cutScene1" method="_on_animation_player_animation_finished"]
[connection signal="finished" from="AudioFondo" to="AudioFondo" method="_on_finished"]
